--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,8 @@ language: de
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Schriften 13: Märchen / Dramatische Gedichte / Fragmente
 
   Die Heymonskinder / Melusine / Aus: König Rother / Der
